...
            "state" : "translated",
            "value" : "TTS 没有生成音频，请检查设备。"
          }
        }
      }
    },
    "UTUVO Type" : {
      "shouldTranslate" : false
    },
    "UTUVO Type 免費、沒有廣告，也沒有自己的伺服器。" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
...
            "state" : "translated",
            "value" : "出處與整理"
          }
        }
      }
    },
    "分隔音節" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "分隔音节"
          }
...
            "state" : "translated",
            "value" : "切换到 UTUVO Type 键盘"
          }
        }
      }
    },
    "切換鍵盤版面" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "切换键盘布局"
          }
...
            "state" : "translated",
            "value" : "拼音"
          }
        }
      }
    },
    "拼音鍵盤" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "拼音键盘"
          }
...
            "state" : "translated",
            "value" : "改成"
          }
        }
      }
    },
    "改用拼音" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "改用拼音"
          }
        }
      }
    },
    "改用注音" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "改用注音"
          }
        }
      }
    },
    "整理中…" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "整理中…"
          }
...
            "state" : "translated",
            "value" : "更多候选字"
          }
        }
      }
    },
    "替換" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "替换"
          }
...
            "state" : "translated",
            "value" : "注音"
          }
        }
      }
    },
    "注音鍵盤" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "注音键盘"
          }
...
            "state" : "translated",
            "value" : "确认“允许完全访问”已打开，并且在 UTUVO Type 里允许了麦克风。"
          }
        }
      }
    },
    "空格" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "空格"
          }
        }
      }
    },
    "空白" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "空格"
          }
...
            "state" : "translated",
            "value" : "简体中文"
          }
        }
      }
    },
    "結束鍵盤語音" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "结束键盘语音"
          }
...
            "state" : "translated",
            "value" : "英语"
          }
        }
      }
    },
    "英文鍵盤" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "英文键盘"
          }
...
            "state" : "translated",
            "value" : "要替换的词"
          }
        }
      }
    },
    "設定" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "设置"
          }
...
            "state" : "translated",
            "value" : "语言"
          }
        }
      }
    },
    "語音" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "语音"
          }
...
